ajout du grand titre

--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     <title>Document</title>
 </head>
 <body>
-     axel
-    mathias
-    maxence
+   <header> Fruits et légumes</header>
 </body>
 </html>
