--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
     <title>Document</title>
 </head>
 <body>
-   <header> Fruits et légumes</header>
+   
+<h1 style="font-size: 60px; font-weight: bold; text-align: center;">
+    Fruits et légumes
+</h1>
    <body style="background-color: lightgreen;">
 </body>
 </html>
