ajout image panier fruit

--- a/index.html
+++ b/index.html
@@ -14,5 +14,6 @@
     Fruits et légumes
 </h1>
    <body style="background-color: lightgreen;">
+    <img src="panier.webp" width="256", height="400"/>
 </body>
 </html>
