--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
    
-<h1 style="font-size: 60px; font-weight: bold; text-align: center;">
-    Fruits et légumes
-</h1>
+<h1> Fruits et légumes </h1>
    <body style="background-color: lightgreen;">
-    <img src="panier.webp" width="256", height="400"/>
+    <img src="panier.webp" />
 </body>
 </html>
