--- a/index.html
+++ b/index.html
@@ -6,12 +6,11 @@
 
     <link rel="stylesheet" href="styles/desktop.css" media="screen and (min-width: 768px)"> 
     <link rel="stylesheet" href="styles/mobile.css" media="screen and (max-width: 767px)"> 
-    <title>Document</title>
+    <title>F&L </title>
 </head>
 <body>
    
 <h1> Fruits et légumes </h1>
-   <body style="background-color: lightgreen;">
     <img src="panier.webp" />
 </body>
 </html>
