--- a/index.html
+++ b/index.html
@@ -12,5 +12,45 @@
    
 <h1> Fruits et légumes </h1>
     <img src="vigne.AVIF" />
+
+
+<section class="banner">
+
+    
+    <div class="banner-promo">
+        De nouvelles remises pour vous : 5% dès 500€ HT // 10% dès 750€ HT // 15% dès 1500€ HT
+    </div>
+
+    
+    <div class="banner-infos">
+
+        <div class="info">
+            <div class="info-icon">🚚</div>
+            <p>Garantie de livraison en France métropolitaine (hors Corse)</p>
+        </div>
+
+        <div class="info">
+            <div class="info-icon">💳</div>
+            <p>Paiement sécurisé</p>
+        </div>
+
+        <div class="info">
+            <div class="info-icon">✏️</div>
+            <p>Garantie sur les produits</p>
+        </div>
+
+        <div class="info">
+            <div class="info-icon">🎧</div>
+            <p>
+                Nous contacter :<br>
+                clairelegumes@hotmail.fr<br>
+                Lundi au vendredi 9h–12h et 14h–17h
+            </p>
+        </div>
+
+    </div>
+</section>
+
+
 </body>
 </html>
