--- a/index.html
+++ b/index.html
@@ -11,7 +11,11 @@
 <body>
    
 <h1> Fruits et légumes </h1>
-    <img src="vigne.AVIF" />
+    
+<a href="panier.html" class="btn-panier"> Panier</a>
+
+
+<img src="vigne.AVIF" />
 
 
 <section class="banner">
