--- a/profil.html
+++ b/profil.html
@@ -1,3 +1,72 @@
 <!DOCTYPE html>
 <html lang="fr">
-    
+    <head>
+    <meta charset="UTF-8">
+    <title>Mon Panier</title>
+</head>
+<body>
+    <h1>Mon panier</h1>
+    <p>🥕 À propos</p>
+
+
+<p>
+Je m’appelle Claire et je suis maraîchère depuis plusieurs années.
+
+Chaque matin, avant même que le soleil ne colore les champs, je marche entre mes rangées de légumes. J’observe, je respire, je touche la terre. C’est elle qui me guide. C’est avec elle que je travaille, jamais contre elle.
+
+
+J’ai choisi ce métier pour une raison simple :
+
+
+Je voulais cultiver quelque chose de vrai.
+
+
+Ici, sur ma petite ferme, je sème, j’arrose, je récolte, je prépare chaque panier avec mes mains. Pas de machines géantes, pas de produits chimiques, seulement du temps, de la patience et beaucoup d’amour pour ce que je fais.
+
+</p>
+
+🌿 
+
+<p>Ma promesse</p>
+
+
+<p>Je veux que chaque légume que vous ramenez chez vous ait une histoire :
+
+celle du soleil qu’il a reçu, de la pluie qui l’a nourri, des gestes doux qui l’ont accompagné.
+
+Je cultive uniquement des légumes de saison, parce que la nature sait mieux que nous ce qu’elle doit offrir.</p>
+
+<p>
+🧺 
+
+Pourquoi ce site ?</p>
+
+
+<p>Pour vous partager mon travail au quotidien,
+
+pour que vous puissiez commander vos paniers facilement,
+
+et surtout pour créer un lien entre ma ferme et votre cuisine.
+
+Je crois que bien manger commence par connaître celle ou celui qui a fait pousser vos légumes.</p>
+
+<p>
+🌻 
+
+Une agriculture simple, sincère, humaine</p>
+<p>
+Quand vous achetez un panier ici, vous soutenez une agriculture à taille humaine, respectueuse de la terre et des saisons.
+
+Et moi, en retour, je vous offre le meilleur de ce que ma petite ferme peut donner :
+
+des légumes frais, colorés, gorgés de goût… et cultivés avec le cœur.
+
+
+
+Je suis heureuse de partager un peu de ma vie avec vous.
+
+Merci d’être là, et bienvenue dans mon potager.</p>
+
+    <a href="index.html">⬅ Retour</a>
+</body>
+</html>
