--- a/index.html
+++ b/index.html
@@ -17,6 +17,77 @@
 
 <img src="vigne.AVIF" />
 
+<section class="produits">
+    <h2>Produits disponibles</h2>
+
+    <div class="colonnes-produits">
+
+        
+        <div class="categorie">
+            <h3>Légumes</h3>
+
+            <table class="table-produits">
+                <thead>
+                    <tr>
+                        <th>Produit</th>
+                        <th>Prix / kg</th>
+                        <th>Quantité restante</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Carottes</td>
+                        <td>2,50 €</td>
+                        <td>35 kg</td>
+                    </tr>
+                    <tr>
+                        <td>Tomates</td>
+                        <td>3,20 €</td>
+                        <td>20 kg</td>
+                    </tr>
+                    <tr>
+                        <td>Pommes de terre</td>
+                        <td>1,80 €</td>
+                        <td>80 kg</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        
+        <div class="categorie">
+            <h3>Fruits</h3>
+
+            <table class="table-produits">
+                <thead>
+                    <tr>
+                        <th>Produit</th>
+                        <th>Prix / kg</th>
+                        <th>Quantité restante</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Pommes</td>
+                        <td>2,10 €</td>
+                        <td>40 kg</td>
+                    </tr>
+                    <tr>
+                        <td>Banane</td>
+                        <td>2,80 €</td>
+                        <td>25 kg</td>
+                    </tr>
+                    <tr>
+                        <td>Fraises</td>
+                        <td>6,50 €</td>
+                        <td>10 kg</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+    </div>
+</section>
 
 <section class="banner">
 
