--- a/index.html
+++ b/index.html
@@ -27,13 +27,16 @@
             <h3>Légumes</h3>
 
             <table class="table-produits">
-                <thead>
-                    <tr>
-                        <th>Produit</th>
-                        <th>Prix / kg</th>
-                        <th>Quantité restante</th>
-                    </tr>
-                </thead>
+                    <thead>
+                        <tr>
+                            <th>Produit</th>
+                            <th>Prix / kg</th>
+                            <th>Quantité restante</th>
+                            <th>Quantité à ajouter</th>
+                            <th></th>
+                        </tr>
+                    </thead>
+                    
                 <tbody>
                     <tr>
                         <td>Carottes</td>
