--- a/profil.html
+++ b/profil.html
@@ -2,6 +2,9 @@
 <html lang="fr">
     <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link rel="stylesheet" href="styles/desktop.css" media="screen and (min-width: 768px)"> 
     <title>Mon Panier</title>
 </head>
 <body>
