--- a/index.html
+++ b/index.html
@@ -12,7 +12,20 @@
     <h1 class="logo">F&L</h1>
 
 
-<img src="vigne.AVIF" />
+
+<section class="hero">
+    <img src="vigne.AVIF" />class="hero-img" alt="Paysage">
+
+    <div class="hero-overlay">
+        <h2>Retrouvez notre gamme complète du moment</h2>
+        <p>Les barquettes cartons et les sacs Kraft sont arrivés</p>
+        <a href="#" class="hero-btn">DÉCOUVRIR LA SÉLECTION DU MOMENT</a>
+    </div>
+</section>
+
+
+
+
 <a href="panier.html" class="btn-panier"> Panier</a>
 <a href="profil.html" class="btn-profil"> Profil</a>
 
