rendu image transparance

--- a/index.html
+++ b/index.html
@@ -13,15 +13,16 @@
 
 
 
-<section class="hero">
-    <img src="vigne.AVIF" />class="hero-img" alt="Paysage">
-
-    <div class="hero-overlay">
-        <h2>Retrouvez notre gamme complète du moment</h2>
-        <p>Les barquettes cartons et les sacs Kraft sont arrivés</p>
-        <a href="#" class="hero-btn">DÉCOUVRIR LA SÉLECTION DU MOMENT</a>
-    </div>
-</section>
+    <section class="hero">
+        <img src="vigne.AVIF" class="hero-img" alt="Paysage">
+    
+        <div class="hero-overlay">
+            <h2>Retrouvez notre gamme complète du moment</h2>
+            <p>Les barquettes cartons et les sacs Kraft sont arrivés</p>
+            <a href="#" class="hero-btn">DÉCOUVRIR LA SÉLECTION DU MOMENT</a>
+        </div>
+    </section>
+    
 
 
 
