ancre sur produit

--- a/index.html
+++ b/index.html
@@ -31,8 +31,9 @@
 <a href="profil.html" class="btn-profil"> Profil</a>
 
 <section class="produits">
-    <h2>Produits disponibles</h2>
-
+    
+    <section id="produits-disponibles" class="produits">
+        <h2>Produits disponibles</h2>
     <div class="colonnes-produits">
 
         
