lien entre produit et annonce

--- a/index.html
+++ b/index.html
@@ -19,7 +19,10 @@
         <div class="hero-overlay">
             <h2>Retrouvez notre gamme complète du moment</h2>
             <p>Les barquettes cartons et les sacs Kraft sont arrivés</p>
-            <a href="#" class="hero-btn">DÉCOUVRIR LA SÉLECTION DU MOMENT</a>
+            <a href="#produits-disponibles" class="hero-btn">
+                DÉCOUVRIR LA SÉLECTION DU MOMENT
+            </a>
+            
         </div>
     </section>
     
