soulignement des titres profil

--- a/profil.html
+++ b/profil.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Pourquoi moi ?</h1>
-    <p>🥕 À propos</p>
+     <p>🥕 <span class="souligne">À propos</span></p>
 
 
 <p>
@@ -28,9 +28,9 @@ Ici, sur ma petite ferme, je sème, j’arrose, je récolte, je prépare chaque 
 
 </p>
 
-🌿 
+ 
 
-<p>Ma promesse</p>
+<p>🌿<span class="souligne">Ma promesse</span></p>
 
 
 <p>Je veux que chaque légume que vous ramenez chez vous ait une histoire :
@@ -42,7 +42,7 @@ Je cultive uniquement des légumes de saison, parce que la nature sait mieux que
 <p>
 🧺 
 
-Pourquoi ce site ?</p>
+<span class="souligne">Pourquoi ce site ?</span></p>
 
 
 <p>Pour vous partager mon travail au quotidien,
@@ -56,7 +56,7 @@ Je crois que bien manger commence par connaître celle ou celui qui a fait pouss
 <p>
 🌻 
 
-Une agriculture simple, sincère, humaine</p>
+<span class="souligne">Une agriculture simple, sincère, humaine</span></p>
 <p>
 Quand vous achetez un panier ici, vous soutenez une agriculture à taille humaine, respectueuse de la terre et des saisons.
 
