--- a/panier.html
+++ b/panier.html
@@ -8,7 +8,7 @@
     <title>Mon Panier</title>
 </head>
 <body>
-    <h2 class="=Panier">  Mon Panier </h2>
+    <h2>  Mon Panier </h2>
     <p>Votre panier est vide pour le moment.</p>
 
     <a href="index.html">⬅ Retour</a>
