meilleur mise en page profil

--- a/profil.html
+++ b/profil.html
@@ -1,113 +1,118 @@
 <!DOCTYPE html>
 <html lang="fr">
-    <head>
+
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <link rel="stylesheet" href="styles/desktop.css" media="screen and (min-width: 768px)"> 
-    <title>Mon Panier</title>
+    <link rel="stylesheet" href="styles/desktop.css" media="screen and (min-width: 768px)">
+    <title>Pourquoi moi ?</title>
 </head>
+
 <body>
-    <h1>Pourquoi moi ?</h1>
-     <p>🥕 <span class="souligne">À propos</span></p>
 
+    <main class="about-page">
 
-<p>
-Je m’appelle Claire et je suis maraîchère depuis plusieurs années.
+        <!-- TITRE PRINCIPAL -->
+        <h1 class="about-title">Pourquoi moi&nbsp;?</h1>
 
-Chaque matin, avant même que le soleil ne colore les champs, je marche entre mes rangées de légumes. J’observe, je respire, je touche la terre. C’est elle qui me guide. C’est avec elle que je travaille, jamais contre elle.
-
-
-J’ai choisi ce métier pour une raison simple :
-
-
-Je voulais cultiver quelque chose de vrai.
-
-
-Ici, sur ma petite ferme, je sème, j’arrose, je récolte, je prépare chaque panier avec mes mains. Pas de machines géantes, pas de produits chimiques, seulement du temps, de la patience et beaucoup d’amour pour ce que je fais.
-
-</p>
-
- 
-
-<p>🌿<span class="souligne">Ma promesse</span></p>
-
-
-<p>Je veux que chaque légume que vous ramenez chez vous ait une histoire :
-
-celle du soleil qu’il a reçu, de la pluie qui l’a nourri, des gestes doux qui l’ont accompagné.
-
-Je cultive uniquement des légumes de saison, parce que la nature sait mieux que nous ce qu’elle doit offrir.</p>
-
-<p>
-🧺 
-
-<span class="souligne">Pourquoi ce site ?</span></p>
-
-
-<p>Pour vous partager mon travail au quotidien,
-
-pour que vous puissiez commander vos paniers facilement,
-
-et surtout pour créer un lien entre ma ferme et votre cuisine.
-
-Je crois que bien manger commence par connaître celle ou celui qui a fait pousser vos légumes.</p>
-
-<p>
-🌻 
-
-<span class="souligne">Une agriculture simple, sincère, humaine</span></p>
-<p>
-Quand vous achetez un panier ici, vous soutenez une agriculture à taille humaine, respectueuse de la terre et des saisons.
-
-Et moi, en retour, je vous offre le meilleur de ce que ma petite ferme peut donner :
-
-des légumes frais, colorés, gorgés de goût… et cultivés avec le cœur.
-
-
-
-Je suis heureuse de partager un peu de ma vie avec vous.
-
-Merci d’être là, et bienvenue dans mon potager.</p>
-
-    <a href="index.html">⬅ Retour</a>
-<section class="banner">
-
-    
-    <div class="banner-promo">
-        De nouvelles remises pour vous : 5% dès 500€ HT // 10% dès 750€ HT // 15% dès 1500€ HT
-    </div>
-
-    
-    <div class="banner-infos">
-
-        <div class="info">
-            <div class="info-icon">🚚</div>
-            <p>Garantie de livraison en France métropolitaine (hors Corse)</p>
-        </div>
-
-        <div class="info">
-            <div class="info-icon">💳</div>
-            <p>Paiement sécurisé</p>
-        </div>
-
-        <div class="info">
-            <div class="info-icon">✏️</div>
-            <p>Garantie sur les produits</p>
-        </div>
-
-        <div class="info">
-            <div class="info-icon">🎧</div>
+        <!-- SECTION À PROPOS -->
+        <section class="about-section">
+            <h2>🥕 À propos</h2>
             <p>
-                Nous contacter :<br>
-                clairelegumes@hotmail.fr<br>
-                Lundi au vendredi 9h–12h et 14h–17h
+                Je m’appelle Claire et je suis maraîchère depuis plusieurs années.
+                Chaque matin, avant même que le soleil ne colore les champs, je marche entre mes rangées de légumes.
+                J’observe, je respire, je touche la terre. C’est elle qui me guide. C’est avec elle que je travaille,
+                jamais contre elle.
             </p>
+            <p>
+                J’ai choisi ce métier pour une raison simple : je voulais cultiver quelque chose de vrai.
+                Ici, sur ma petite ferme, je sème, j’arrose, je récolte, je prépare chaque panier avec mes mains.
+                Pas de machines géantes, pas de produits chimiques, seulement du temps, de la patience et beaucoup
+                d’amour pour ce que je fais.
+            </p>
+        </section>
+
+        <!-- SECTION PROMESSE -->
+        <section class="about-section">
+            <h2>🌿 Ma promesse</h2>
+            <p>
+                Je veux que chaque légume que vous ramenez chez vous ait une histoire : celle du soleil qu’il a reçu,
+                de la pluie qui l’a nourri, des gestes doux qui l’ont accompagné.
+                Je cultive uniquement des légumes de saison, parce que la nature sait mieux que nous ce qu’elle doit
+                offrir.
+            </p>
+        </section>
+
+        <!-- SECTION OBJECTIF SITE -->
+        <section class="about-section">
+            <h2>🧺 Pourquoi ce site&nbsp;?</h2>
+            <p>
+                Pour vous partager mon travail au quotidien, pour que vous puissiez commander vos paniers facilement,
+                et surtout pour créer un lien entre ma ferme et votre cuisine.
+                Je crois que bien manger commence par connaître celle ou celui qui a fait pousser vos légumes.
+            </p>
+        </section>
+
+        <!-- SECTION VALEURS -->
+        <section class="about-section">
+            <h2>🌻 Une agriculture simple, sincère, humaine</h2>
+            <p>
+                Quand vous achetez un panier ici, vous soutenez une agriculture à taille humaine,
+                respectueuse de la terre et des saisons.
+                Et moi, en retour, je vous offre le meilleur de ce que ma petite ferme peut donner :
+                des légumes frais, colorés, gorgés de goût… et cultivés avec le cœur.
+            </p>
+            <p>
+                Je suis heureuse de partager un peu de ma vie avec vous.
+                Merci d’être là, et bienvenue dans mon potager.
+            </p>
+        </section>
+
+        <!-- BOUTON RETOUR -->
+        <p class="about-back">
+            <a href="index.html">⬅ Retour</a>
+        </p>
+
+    </main>
+
+
+    <!-- BANNIÈRE (tu peux la garder si tu veux en bas de page) -->
+    <section class="banner">
+
+        <div class="banner-promo">
+            De nouvelles remises pour vous : 5% dès 500€ HT // 10% dès 750€ HT // 15% dès 1500€ HT
         </div>
 
-    </div>
-</section>
+        <div class="banner-infos">
 
+            <div class="info">
+                <div class="info-icon">🚚</div>
+                <p>Garantie de livraison en France métropolitaine (hors Corse)</p>
+            </div>
+
+            <div class="info">
+                <div class="info-icon">💳</div>
+                <p>Paiement sécurisé</p>
+            </div>
+
+            <div class="info">
+                <div class="info-icon">✏️</div>
+                <p>Garantie sur les produits</p>
+            </div>
+
+            <div class="info">
+                <div class="info-icon">🎧</div>
+                <p>
+                    Nous contacter :<br>
+                    clairelegumes@hotmail.fr<br>
+                    Lundi au vendredi 9h–12h et 14h–17h
+                </p>
+            </div>
+
+        </div>
+    </section>
 
 </body>
+
 </html>
