--- a/profil.html
+++ b/profil.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
     <link rel="stylesheet" href="styles/desktop.css" media="screen and (min-width: 768px)">
     <title>Pourquoi moi ?</title>
 </head>
@@ -14,7 +13,7 @@
     <main class="about-page">
 
         
-        <h1 class="about-title">Pourquoi moi&nbsp;?</h1>
+        <h1 class="about-title">Pourquoi moi ?</h1>
 
         
         <section class="about-section">
