--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
 </section>
 
 <section class="banner">
+    <h3> Ne manquez pas les nouvelles offres </h3>
 
     
     <div class="banner-promo">
