mise en page section en bas

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 </section>
 
 <section class="banner">
-    <h3> Ne manquez pas les nouvelles offres </h3>
+    <h3> Les immanquabless </h3>
 
     
     <div class="banner-promo">
