--- a/panier.html
+++ b/panier.html
@@ -79,7 +79,9 @@
 
 
 
-    
+<section class="banner">
+    <h3> Les immanquables </h3>   
+
     <div class="banner-promo">
         De nouvelles remises pour vous : 5% dès 500€ HT // 10% dès 750€ HT // 15% dès 1500€ HT
     </div>
@@ -112,6 +114,6 @@
         </div>
 
     </div>
-
+<section>
 </body>
 </html>
