--- a/profil.html
+++ b/profil.html
@@ -78,6 +78,7 @@
 
     
     <section class="banner">
+        <h3> Les immanquables </h3>
 
         <div class="banner-promo">
             De nouvelles remises pour vous : 5% dès 500€ HT // 10% dès 750€ HT // 15% dès 1500€ HT
